fixed the html errors and images layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <h1>
             <img src="images/pictureofme.jpeg" alt="A picture of me">
-            <console class="writeLine">Jay Brown</console>
+            Jay Brown
         </h1>
 
     </header>
@@ -36,7 +36,7 @@
 
     <main>
         <h2>
-            <console class="writeLine">WDD 230: Web Frontend Development</console>
+            WDD 230: Web Frontend Development
         </h2>
 
         <section class="card">
