--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     for WDD 230 - Web Frontend Development.">
 
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="favicon.ico">
 
     <title>[Jay Brown] - WDD 230 - Web Frontend Development</title>
 
