--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         name="description"
         content="This is Jay Brown's course assignment portal 
     for WDD 230 - Web Frontend Development.">
+    <meta property="og:title" content="Jay Brown - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="My course website">
+    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tripadvisor.com%2FTourism-g60927-Corpus_Christi_Texas-Vacations.html&psig=AOvVaw2PjR8Qe_ZfkbySeXMbyCxr&ust=1705625559878000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCNCuuNDc5YMDFQAAAAAdAAAAABAD">
+    <meta property="og:url" content="https://myusernamestinks.github.io/wdd230/">
 
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
