--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tripadvisor.com%2FTourism-g60927-Corpus_Christi_Texas-Vacations.html&psig=AOvVaw2PjR8Qe_ZfkbySeXMbyCxr&ust=1705625559878000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCNCuuNDc5YMDFQAAAAAdAAAAABAD">
     <meta property="og:url" content="https://myusernamestinks.github.io/wdd230/">
 
-    
+
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
@@ -50,7 +50,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href="#">Activity 1</a></li>
+                <li><a href="">Activity 1</a></li>
                 <li><a href="#">Activity 2</a></li>
             </ul>
         </section>
