added the html link to course page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href="">Activity 1</a></li>
+                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design.html">Activity 1</a></li>
                 <li><a href="#">Activity 2</a></li>
             </ul>
         </section>
