--- a/index.html
+++ b/index.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jay Brown">
-    <meta 
-        name="description"
-        content="This is Jay Brown's course assignment portal 
-    for WDD 230 - Web Frontend Development.">
+    <meta name="description" content="This is Jay Brown's course assignment portal for WDD 230 - Web Frontend Development.">
     <meta property="og:title" content="Jay Brown - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tripadvisor.com%2FTourism-g60927-Corpus_Christi_Texas-Vacations.html&psig=AOvVaw2PjR8Qe_ZfkbySeXMbyCxr&ust=1705625559878000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCNCuuNDc5YMDFQAAAAAdAAAAABAD">
     <meta property="og:url" content="https://myusernamestinks.github.io/wdd230/">
 
-
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="lesson02/larger.css">
     <link rel="icon" href="favicon.ico">
-
 
     <title>[Jay Brown] - WDD 230 - Web Frontend Development</title>
 
@@ -34,7 +30,7 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="https://myusernamestinks.github.io/wdd230/">Home</a></li>
             <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="chamber/">Chamber</a></li>
             <li><a href="https://www.byui.edu/">BYU-Idaho</a></li>
@@ -50,8 +46,8 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design.html">Activity 1</a></li>
-                <li><a href="#">Activity 2</a></li>
+                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design.html">Design</a></li>
+                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/media-query.html">Media Query</a></li>
             </ul>
         </section>
 
