--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <ul>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design.html">Design</a></li>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/media-query.html">Media Query</a></li>
+                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design-principles.html">Design Principles Document</a></li>
             </ul>
         </section>
 
