--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design.html">Design</a></li>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/media-query.html">Media Query</a></li>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design-principles.html">Design Principles Document</a></li>
+                <li><a href="images/combinators_screenie.png" target="_blank">Combinator Screenshot</a></li>
+                
             </ul>
         </section>
 
