--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design-principles.html">Design Principles Document</a></li>
                 <li><a href="images/combinators_screenie.png" target="_blank">Combinator Screenshot</a></li>
                 <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/BabdjLw">Pseudo-elements</a></li>
+                <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/gOExPJe">Hamburger Menu</a></li>
                 
             </ul>
         </section>
