more changes added to the site plan

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -47,7 +47,7 @@
           <strong>Primary Color:</strong> #d51315 (used for headings)<br>
           <strong>Secondary Color:</strong> #000000 (used for paragraphs)<br>
           <strong>Background Color:</strong> #ffffff (used for background)<br>
-        </p>These colors represent the local highschool schools. (This may change slightly)
+        </p>These colors represent the local highschool colors. (This may change slightly)
         </p>
       </section>
 
@@ -64,7 +64,8 @@
         <p>
             The wireframe view for the Chamber of Commerce site.
         </p>
-        <img src="images/Screenshot 2024-01-27 155520.png" alt="Wireframe">
+        <img src="images/Screenshot 2024-01-27 155520.png" alt="desktop view Wireframe">
+        <img src="images/mobileviewwireframe.png" alt="mobile view Wireframe">
       </section>
     
 </body>
