p-class added to links.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li><a href="images/combinators_screenie.png" target="_blank">Combinator Screenshot</a></li>
                 <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/BabdjLw">Pseudo-elements</a></li>
                 <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/gOExPJe">Hamburger Menu</a></li>
-                
+                <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/jOJYyxE">Pseudo-Class</a></li>
             </ul>
         </section>
 
