--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design.html">Design</a></li>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/media-query.html">Media Query</a></li>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design-principles.html">Design Principles Document</a></li>
-                <li><a href="images/combinators_screenie.png" target="_blank">Combinator Screenshot</a></li>
-                <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/BabdjLw">Pseudo-elements</a></li>
-                <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/gOExPJe">Hamburger Menu</a></li>
+                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/media-query.html">Media Query</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson02/design-principles.html">Design Principles Document</a></li>
+                <li><a href="images/combinators_screenie.png" target="_blank">Combinators</a> | <a href="https://codepen.io/Jay-Brown-the-bashful/pen/BabdjLw">Pseudo-elements</a> | <a href="https://codepen.io/Jay-Brown-the-bashful/pen/gOExPJe">Responsive Menu</a></li>
                 <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/jOJYyxE">Pseudo-Class</a></li>
             </ul>
         </section>
