--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
         <h1>Katy Chamber of Commerce</h1>
     </header>
 
-    <button id="menu"></button>
+    <button id="menu" title="menu"></button>
     <nav class="navigation">
         <ul>
             <li><a href="#" class="active">Home</a></li>
@@ -37,16 +37,17 @@
     </nav>
     
     <main>
-        <section class="hero-image">
-            <img src="images/katy-texas-hero-img.png" alt="A picture of a landmark in Katy, Texas">
-        </section>
+        <div class="hero-image">
+            <img src="images/katy-texas-hero-img.png" alt="A picture of a landmark in Katy, Texas" class="large-image">
+            <img src="images/katy-silo.png" alt="A picture of a landmark in Katy, Texas" class="mobile-image">
+        </div>
 
-        <section class="call-to-action">
+        <div class="call-to-action">
             <a href="https://www.katychamber.com/">Join the Katy Chamber of Commerce</a>
-        </section>
+        </div>
 
         <section class="current-events">
-            <h2>Upcoming Events</h2>
+            <h2>Current Events</h2>
             <div class="events-container">
                 <div class="card">Event 1</div>
                 <div class="card">Event 2</div>
@@ -54,7 +55,6 @@
             </div>
         </section>
 
-        </section>
 
         <section class="weather-card">
             <h2>Weather</h2>
@@ -70,16 +70,12 @@
                 <h3>Advertise 2</h3>
                 <p>Advertise 2</p>
             </div>
-            <div class="spotlight-item">
-                <h3>Advertise 3</h3>
-                <p>Advertise 3</p>
-            </div>
         </section>
 
         
     </main>
     <footer>
-        <p>&copy; <span id="currentYear"></span>, Jay Brown, U.S.A | WDD 230 Project | </id></P></p>
+        <p>&copy; <span id="currentYear"></span>, Jay Brown, U.S.A | WDD 230 Project | </P>
 
         <P id="lastModified"></P>
     </footer>
