few changes to chamber site

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,7 +59,7 @@
 
         <section class="spotlight">
             <div class="spotlight-item">
-                <h3>Advertise 1 title></h3>
+                <h3>Advertise 1 title</h3>
                 <p>Advertisement description</p>
             </div>
             <div class="spotlight-item">
