--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book of Mormon - Top 10</title>
     <meta name="description" content="This is a Book of Mormon Favorite Chapters Application for WDD 230">
-    <meta name="Author" content="Jay Brown">
+    <meta name="author" content="Jay Brown">
 
     <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
-    <h1>📖 Book of Mormon - Top 10</h1>
+    <h1>📖<a href="https://www.churchofjesuschrist.org/study/scriptures/bofm?lang=eng">Book of Mormon</a>  - Top 10</h1>
 <main>
 	<label for="favchap">Enter Book and Chapter: </label>
 	<input type="text" id="favchap" placeholder="Alma 5">
