added the bom to homepage

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/media-query.html">Media Query</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson02/design-principles.html">Design Principles Document</a></li>
                 <li><a href="images/combinators_screenie.png" target="_blank">Combinators</a> | <a href="https://codepen.io/Jay-Brown-the-bashful/pen/BabdjLw">Pseudo-elements</a> | <a href="https://codepen.io/Jay-Brown-the-bashful/pen/gOExPJe">Responsive Menu</a></li>
                 <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/jOJYyxE">Pseudo-Class</a></li>
+                <li><a href="https://myusernamestinks.github.io/wdd230/lesson05/bom.html">Favorite BOM Scripture</a></li>
             </ul>
         </section>
 
