fixed the slider bar.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -74,8 +74,11 @@
         </section>
 
         
-        <button onclick="darkMode()" id="darkModeBtn" class="dark-mode-btn">Dark Mode</button>
-        <button onclick="lightMode()" id="lightModeBtn" class="light-mode-btn">Light Mode</button>
+        <label class="switch">
+            <input type="checkbox" id="modeSwitch">
+            <span class="slider round"></span>
+            
+        </label>
 
     </main>
     <footer>
