--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li><a href="images/combinators_screenie.png" target="_blank">Combinators</a> | <a href="https://codepen.io/Jay-Brown-the-bashful/pen/BabdjLw">Pseudo-elements</a> | <a href="https://codepen.io/Jay-Brown-the-bashful/pen/gOExPJe">Responsive Menu</a></li>
                 <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/jOJYyxE">Pseudo-Class</a></li>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson05/bom.html">Favorite BOM Scripture</a></li>
+                <li><a href="images/landscape.webp" target="_blank">WebP</a></li>
             </ul>
         </section>
 
