--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
 
         <h1>
-            <img src="images/pictureofme.jpeg" alt="A picture of me">
+            <img src="images/pictureofme.webp" alt="A picture of me">
             Jay Brown
         </h1>
 
@@ -40,6 +40,14 @@
     </nav>
 
     <main>
+        <div class="hero">
+            <picture>
+                <source media="(max-width: 400px)" srcset="images/houston-texas-temple-small.webp">
+                <source media="(max-width: 960px)" srcset="images/houston-texas-temple-large.webp">
+                <img src="images/houston-texas-temple.jpg" alt="Favorite Latter-day Temple">
+            </picture>
+        </div>
+
         <h2>
             WDD 230: Web Frontend Development
         </h2>
