added label and hero image

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                 <source media="(max-width: 960px)" srcset="images/houston-texas-temple-large.webp">
                 <img src="images/houston-texas-temple.jpg" alt="Favorite Latter-day Temple">
             </picture>
+
+            <div class="herolabel">
+                <p>Hoston Texas Temple</p>
+            </div>
         </div>
 
         <h2>
