change a minor issue with windchill

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -76,8 +76,8 @@
             <h2>Weather</h2>
             <p>
             Temperature: <span id="temperature">30 °F</span><br>
-            Wind Speed: <span id="windSpeed">3.01 mph</span><br>
-                        <span id="windChill">Wind Chill: </span>
+            Wind Speed: <span id="windSpeed">5.01 mph</span><br>
+                        <span id="windChill"></span>
         </p>
         </section>
 
