added a webp to the large image.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
                 <source media="(max-width: 400px)" srcset="images/wdd230-org-small.webp">
                 <source media="(max-width: 680px)" srcset="images/wdd230-org-medium.webp">
                 <source media="(max-width: 960px)" srcset="images/wdd230-org-large.webp">
-                <img src="images/wdd230-org.jpg" alt="A very important meeting of three random people">
+                <img src="images/wdd230-org-large.webp" alt="A very important meeting of three random people">
             </picture>
         </div>
 
