added lazy load to home page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/jOJYyxE">Pseudo-Class</a></li>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson05/bom.html">Favorite BOM Scripture</a></li>
                 <li><a href="images/landscape.webp">WebP</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson06/responsive-images.html">Responsive-Images</a> </li>
+                <li><a href="https://myusernamestinks.github.io/wdd230//lesson07/lazyloard.html">Lazy Load Image</a></li>
             </ul>
         </section>
 
