added total visits

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section class="card">
             <h3>Information</h3>
             <p>Weather: </p>
-            <p>Number of Visits: </p>
+            <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
         </section>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d452166.65348119085!2d-97.68551742474335!3d27.700238755597415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86685f806192d2b3%3A0xaed15093890e908f!2sCorpus%20Christi%2C%20TX!5e0!3m2!1sen!2sus!4v1706153148396!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
