--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/jOJYyxE">Pseudo-Class</a></li>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson05/bom.html">Favorite BOM Scripture</a></li>
                 <li><a href="images/landscape.webp">WebP</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson06/responsive-images.html">Responsive-Images</a> </li>
-                <li><a href="https://myusernamestinks.github.io/wdd230//lesson07/lazyloard.html">Lazy Load Image</a></li>
+                <li><a href="https://myusernamestinks.github.io/wdd230//lesson07/lazyloard.html">Lazy Load Image</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson08/bom.html">Local Storage</a></li>
             </ul>
         </section>
 
@@ -75,7 +75,7 @@
             <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
         </section>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d452166.65348119085!2d-97.68551742474335!3d27.700238755597415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86685f806192d2b3%3A0xaed15093890e908f!2sCorpus%20Christi%2C%20TX!5e0!3m2!1sen!2sus!4v1706153148396!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d452166.65348119085!2d-97.68551742474335!3d27.700238755597415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86685f806192d2b3%3A0xaed15093890e908f!2sCorpus%20Christi%2C%20TX!5e0!3m2!1sen!2sus!4v1706153148396!5m2!1sen!2sus" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
      
     </main>
 
