table build added to home page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson05/bom.html">Favorite BOM Scripture</a></li>
                 <li><a href="images/landscape.webp">WebP</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson06/responsive-images.html">Responsive-Images</a> </li>
                 <li><a href="https://myusernamestinks.github.io/wdd230//lesson07/lazyloard.html">Lazy Load Image</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson08/bom.html">Local Storage</a></li>
+                <li><a href="https://myusernamestinks.github.io/wdd230/lesson09/tablebuild.html">Table Build</a></li>
             </ul>
         </section>
 
