fixed discover page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
     <nav class="navigation">
         <ul>
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Discover</a></li>
+            <li><a href="https://myusernamestinks.github.io/wdd230/chamber/discover.html">Discover</a></li>
             <li><a href="#">Directory</a></li>
             <li><a href="https://business.katychamber.com/member-application">Join</a></li>
         </ul>
