fixed links in the discover

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -29,8 +29,8 @@
     <button id="menu" title="menu"></button>
     <nav class="navigation">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#" class="active">Discover</a></li>
+            <li><a href="https://myusernamestinks.github.io/wdd230/chamber/index.html">Home</a></li>
+            <li><a href="https://myusernamestinks.github.io/wdd230/chamber/discover.html" class="active">Discover</a></li>
             <li><a href="#">Directory</a></li>
             <li><a href="https://business.katychamber.com/member-application">Join</a></li>
         </ul>
