few more changes added

--- a/form.html
+++ b/form.html
@@ -34,7 +34,8 @@
         </ul>
     </nav>
 
-    <main class="card">
+    <main class="card" title="Form Build">
+
         <form action="record.html" method="get">
 
             <label for="username">Username:</label>
