--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
             <li><a href="https://myusernamestinks.github.io/wdd230/chamber/index.html" class="active">Home</a></li>
             <li><a href="https://myusernamestinks.github.io/wdd230/chamber/discover.html">Discover</a></li>
             <li><a href="#">Directory</a></li>
-            <li><a href="https://business.katychamber.com/member-application">Join</a></li>
+            <li><a href="https://myusernamestinks.github.io/wdd230/chamber/join.html">Join</a></li>
         </ul>
     </nav>
     
