--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li><a href="images/landscape.webp">WebP</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson06/responsive-images.html">Responsive-Images</a> </li>
                 <li><a href="https://myusernamestinks.github.io/wdd230//lesson07/lazyloard.html">Lazy Load Image</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson08/bom.html">Local Storage</a></li>
                 <li><a href="https://myusernamestinks.github.io/wdd230/lesson09/tablebuild.html">Table Build</a> | <a href="https://myusernamestinks.github.io/wdd230/form.html">Form Build</a></li>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson09/new-ward-members.json">JSON</a>
+                <li><a href="https://myusernamestinks.github.io/wdd230/lesson09/new-ward-members.json">JSON</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson09/prophets.html">Form Build</a>
             </ul>
         </section>
 
