json added but not complete

--- a/index.html
+++ b/index.html
@@ -58,17 +58,7 @@
 
         <section class="card">
             <h3>Learning Activities</h3>
-            <ul>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/design.html">Design</a></li>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson02/media-query.html">Media Query</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson02/design-principles.html">Design Principles Document</a></li>
-                <li><a href="images/combinators_screenie.png" target="_blank">Combinators</a> | <a href="https://codepen.io/Jay-Brown-the-bashful/pen/BabdjLw">Pseudo-elements</a> | <a href="https://codepen.io/Jay-Brown-the-bashful/pen/gOExPJe">Responsive Menu</a></li>
-                <li><a href="https://codepen.io/Jay-Brown-the-bashful/pen/jOJYyxE">Pseudo-Class</a></li>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson05/bom.html">Favorite BOM Scripture</a></li>
-                <li><a href="images/landscape.webp">WebP</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson06/responsive-images.html">Responsive-Images</a> </li>
-                <li><a href="https://myusernamestinks.github.io/wdd230//lesson07/lazyloard.html">Lazy Load Image</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson08/bom.html">Local Storage</a></li>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson09/tablebuild.html">Table Build</a> | <a href="https://myusernamestinks.github.io/wdd230/form.html">Form Build</a></li>
-                <li><a href="https://myusernamestinks.github.io/wdd230/lesson09/new-ward-members.json">JSON</a> | <a href="https://myusernamestinks.github.io/wdd230/lesson09/prophets.html">Form Build</a>
-            </ul>
+            <ul id="links-container"></ul>
         </section>
 
         <section class="card">
