--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="faviconkaty.ico">
 
-    <title>Katy Chamber of Commerce</title>
+    <title>Katy Chamber of Commerce - Directory</title>
 </head>
 
 <body>
