weather added to the homepage

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
 
         <section class="card">
             <h3>Information</h3>
-            <p>Weather: </p>
+            <figure>
+                <img id="weather-icon" src="" alt="">
+                <p><span id="current-temp"></span></p>
+                <figcaption></figcaption>
+            </figure>
             <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
         </section>
 
