--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="call-to-action">
-            <a href="https://www.katychamber.com/">Join the Katy Chamber of Commerce</a>
+            <a href="https://myusernamestinks.github.io/wdd230/chamber/join.html">Join the Katy Chamber of Commerce</a>
         </div>
 
         <div id="banner" class="banner">
