--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,10 +39,10 @@
     <main>
         <div class="hero">
             <picture>
-                <source media="(max-width: 400px)" srcset="images/wdd230-org-small.webp">
-                <source media="(max-width: 680px)" srcset="images/wdd230-org-medium.webp">
-                <source media="(max-width: 960px)" srcset="images/wdd230-org-large.webp">
-                <img src="images/wdd230-org-large.webp" alt="A very important meeting of three random people">
+                <source media="(max-width: 400px)" srcset="images/Katy-texas-small.webp">
+                <source media="(max-width: 680px)" srcset="images/Katy-texas-medium.webp">
+                <source media="(max-width: 960px)" srcset="images/Katy-texas-large.webp">
+                <img src="images/katy-texas-large.webp" alt="A very important meeting of three random people">
             </picture>
         </div>
 
