--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,7 +78,7 @@
         <section class="weather-card">
             <h2>Weather</h2>
             <figure>
-                <img id="weather-icon" src="" alt="">
+                <img id="weather-icon" src="images/placeholder.png" alt="Placeholder">
                 <p><span id="current-temp"></span></p>
                 <figcaption></figcaption>
             </figure>
