fixed an alt tag

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
                 <source media="(max-width: 400px)" srcset="images/Katy-texas-small.webp">
                 <source media="(max-width: 680px)" srcset="images/Katy-texas-medium.webp">
                 <source media="(max-width: 960px)" srcset="images/Katy-texas-large.webp">
-                <img src="images/katy-texas-large.webp" alt="A very important meeting of three random people">
+                <img src="images/katy-texas-large.webp" alt="train in Katy Texas">
             </picture>
         </div>
 
