few changes made to chamber homepage

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,20 +64,9 @@
             </div>
         </section>
 
-        <section class="spotlight">
-            <div class="spotlight-item">
-                <h3>Latest News</h3>
-                <p>The City of Katy Water Department will be doing hydrant flushing throughout the City Monday, March 4th and will continue through Tuesday, March 5th.
-
-                    It’s important to know that residents in the immediate vicinity of hydrant flushing may experience temporary discoloration of their water. The discoloration is harmless and does not affect the safety of the water. Residents are cautioned to determine if the water is clear before doing laundry as staining may occur.
-                   
-                   If you experience discoloration in your water after hydrant flushing in your neighborhood, clear the pipes in your home by running all interior and exterior water faucets for a few minutes.</p>
-            </div>
-            <div class="spotlight-item">
-                <h3>Economic Development</h3>
-                <p>The City of Katy takes a dynamic approach to economic development. The City is unique in that it sits within three counties – Harris, Fort Bend and Waller. We, together with several local, regional, state and federal partnerships, strategically market and plan for current and future growth. The City is proactive in keeping taxes low, continuing to make improvements to water, sewer and street infrastructure and beautification projects to keep Katy a quality location for new businesses. Prospects who are interested in locating in the City of Katy are encouraged to contact our Planning Department for more information.</p>
-            </div>
-        </section>
+        <section id="spotlight-section">
+            <h2>Spotlight</h2>
+          </section>
 
         <section class="weather-card">
             <h2>Weather</h2>
