--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -31,8 +31,8 @@
         <ul>
             <li><a href="https://myusernamestinks.github.io/wdd230/chamber/index.html">Home</a></li>
             <li><a href="https://myusernamestinks.github.io/wdd230/chamber/discover.html" class="active">Discover</a></li>
-            <li><a href="#">Directory</a></li>
-            <li><a href="https://business.katychamber.com/member-application">Join</a></li>
+            <li><a href="https://myusernamestinks.github.io/wdd230/chamber/directory.html">Directory</a></li>
+            <li><a href="https://myusernamestinks.github.io/wdd230/chamber/join.html">Join</a></li>
         </ul>
     </nav>
     
