few things changed

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,9 +39,9 @@
     <main>
         <div class="hero">
             <picture>
-                <source media="(max-width: 400px)" srcset="images/Katy-texas-small.webp">
-                <source media="(max-width: 680px)" srcset="images/Katy-texas-medium.webp">
-                <source media="(max-width: 960px)" srcset="images/Katy-texas-large.webp">
+                <source media="(max-width: 400px)" srcset="images/katy-texas-small.webp">
+                <source media="(max-width: 680px)" srcset="images/katy-texas-medium.webp">
+                <source media="(max-width: 960px)" srcset="images/katy-texas-large.webp">
                 <img src="images/katy-texas-large.webp" alt="train in Katy Texas">
             </picture>
         </div>
