more changes made to the main layout

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -21,7 +21,7 @@
     <header>
 
         <h1>
-            ~Scoots~ Motor Scooters
+            ~Scoots~ Motor Scooter Rentals
         </h1>
 
     </header>
@@ -45,8 +45,8 @@
 
     </footer>
 
-    
-    
+    <script src="scripts/function.js"></script>
+    <script src="scripts/weather.js"></script>
 
 </body>
 </html>
