almost done with the main fucntions of the html/css

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" href="favicon.ico">
 
-    <title>~Scoots~ - Motor Scooter Rentals in Cozumel off the Coast of Mexico </title>
+    <title>Home ~Scoots~ - Motor Scooter Rentals in Cozumel off the Coast of Mexico </title>
 
 </head>
 <body>
@@ -41,7 +41,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals</p>
+        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals, Contact: +1-123-456-7890</p>
 
     </footer>
 
