Many changes made to the overall page

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico">
 
     <title>Home ~Scoots~ - Motor Scooter Rentals in Cozumel off the Coast of Mexico </title>
@@ -36,12 +37,31 @@
         </ul>
     </nav>
 
+    <div class="cta-banner">
+        <a href="https://myusernamestinks.github.io/wdd230/scoots/reservations.html" class="cta-link">➡️ Make Reservations Now! ⬅️</a>
+    </div>
+
+    <div class="hero-collage">
+        <img src="images/cozumelweb.webp" alt="Image of Cozumel Beach with boats on the shore." loading="lazy">
+        <img src="images/scooterbeachweb.webp" alt="Image of Two scooters riding down the beach." loading="lazy">
+        <img src="images/hutcozumelweb.webp" alt="Image of a hut over the waters of Cozumel." loading="lazy">
+        <img src="images/scooterweb.webp" alt="Image of two scooters parked infront of the beach." loading="lazy">
+        <img src="images/terminalweb.webp" alt="Image of Terminal Puerta Maya further south along the coast." loading="lazy">
+        <img src="images/vintagescootweb.webp" alt="Image of a vintage scooter on the beach." loading="lazy">
+    </div>
+
     <main>
         
     </main>
 
     <footer>
-        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals, Contact: +1-123-456-7890</p>
+
+        <div class="social-icons">
+            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+        </div>
+        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals, Contact Us: +1-123-456-7890</p>
 
     </footer>
 
