--- a/scoots/index.html
+++ b/scoots/index.html
@@ -61,7 +61,7 @@
             <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
             <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
         </div>
-        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals, Contact Us: +1-123-456-7890</p>
+        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals, Contact Us: +1-123-456-7890, Email: ScootsRentals@scoots.com</p>
 
     </footer>
 
