more changes added. working on weather

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -19,6 +19,8 @@
 
 </head>
 <body>
+
+    
     <header>
 
         <h1>
@@ -52,6 +54,52 @@
 
     <main>
         
+        <div class="grid-container">
+            <div class="summary-card-container">
+                <div class="summary-card">
+                    <h2>Rental Information</h2>
+                    <h3>Types of Rentals</h3>
+                    <ul>
+                        <li>Honda Motor Scooters</li>
+                        <ul>
+                            <li>Honda Metropolitan (49cc) - 1 person</li>
+                            <li>Honda Dio (110cc) - 2 person</li>
+                            <li>Honda PCX150 (149cc) - 2 person</li>
+                        </ul>
+                        <li>Side-by-Side ATVs</li>
+                        <ul>
+                            <li>Honda Pioneer 1000 - 4 person</li>
+                        </ul>
+                        <li>Jeeps</li>
+                        <ul>
+                            <li>Jeep Wrangler - 4 door (Manual, AC) - 5 person</li>
+                            <li>Jeep Wrangler - 2 door (Manual, No-AC) - 4 person</li>
+                        </ul>
+                    </ul>
+                    <h3>Rental Services and Agreements</h3>
+                    <ul>
+                        <li>A $50 security deposit is required to confirm reservations.</li>
+                        <li>A valid driver's license is required in hand at the time of rental.</li>
+                        <li>No one under the age of 12 years of age is allowed to ride on the scooters.</li>
+                        <li>Fuel charge is not included.</li>
+                        <li>Unlimited mileage.</li>
+                        <li>Liability insurance is included.</li>
+                        <li>Damage insurance is available for purchase.</li>
+                        <li>Free delivery to Cozumel hotels or Airbnbs for 2+ day rentals.</li>
+                        <li>We accept Google Pay, Apple Pay, cash, credit card, debit card, or Venmo.</li>
+                        <li>Rentals may be returned to one of our two return locations.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="weather-card">
+                <div id="message"></div>
+                <div id="current-temp"></div>
+                <div id="current-humidity"></div>
+                <div id="next-day-forecast"></div>
+                <div id="weather-info"></div>
+            </div>
+        </div>
+
     </main>
 
     <footer>
