more changes. Cant seem to get the weather done. Will come back to that eventually.

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -19,8 +19,11 @@
 
 </head>
 <body>
+    <div id="high-temp-banner" style="display: none;">
+        <p id="high-temp-message"></p>
+        <button id="close-banner">X</button>
+    </div>
 
-    
     <header>
 
         <h1>
@@ -60,17 +63,17 @@
                     <h2>Rental Information</h2>
                     <h3>Types of Rentals</h3>
                     <ul>
-                        <li>Honda Motor Scooters</li>
+                        <li><strong>Honda Motor Scooters</strong></li>
                         <ul>
                             <li>Honda Metropolitan (49cc) - 1 person</li>
                             <li>Honda Dio (110cc) - 2 person</li>
                             <li>Honda PCX150 (149cc) - 2 person</li>
                         </ul>
-                        <li>Side-by-Side ATVs</li>
+                        <li><strong>Side-by-Side ATVs</strong></li>
                         <ul>
                             <li>Honda Pioneer 1000 - 4 person</li>
                         </ul>
-                        <li>Jeeps</li>
+                        <li><strong>Jeeps</strong></li>
                         <ul>
                             <li>Jeep Wrangler - 4 door (Manual, AC) - 5 person</li>
                             <li>Jeep Wrangler - 2 door (Manual, No-AC) - 4 person</li>
@@ -98,6 +101,15 @@
                 <div id="next-day-forecast"></div>
                 <div id="weather-info"></div>
             </div>
+            
+            <div class="rental-location-card">
+                <div class="location-title">Rental Locations</div>
+                <ul class="location-list">
+                    <li><strong>Playa del Carmen-Cozumel Ferry Dock</strong>: Near the Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel</li>
+                    <li><strong>Terminal Puerta Maya</strong>: Near the Terminal Puerta Maya further south along the coast which caters to the cruise lines and patrons.</li>
+                </ul>
+            </div>
+
         </div>
 
     </main>
