Fexed some functions on each page

--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="favicon.ico">
 
     <title>Contact ~Scoots~ - Motor Scooter Rentals in Cozumel off the Coast of Mexico </title>
@@ -36,12 +37,22 @@
         </ul>
     </nav>
 
+    <div class="cta-banner">
+        <a href="https://myusernamestinks.github.io/wdd230/scoots/reservations.html" class="cta-link">➡️ Make Reservations Now! ⬅️</a>
+    </div>
+
     <main>
         
     </main>
 
     <footer>
-        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals, Contact: +1-123-456-7890</p>
+
+        <div class="social-icons">
+            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+        </div>
+        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals, Contact Us: +1-123-456-7890, Email: ScootsRentals@scoots.com</p>
 
     </footer>
 
