adding the json and getting it setup.

--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -41,8 +41,7 @@
         <a href="https://myusernamestinks.github.io/wdd230/scoots/reservations.html" class="cta-link">➡️ Make Reservations Now! ⬅️</a>
     </div>
 
-    <main>
-        
+    <main id="rentals-container">
     </main>
 
     <footer>
@@ -58,6 +57,7 @@
 
     <script src="scripts/function.js"></script>
     <script src="scripts/weather.js"></script>
+    <script src="scripts/rentals.js"></script>
 
 </body>
 </html>
