added the mac and fixed the contact cards.

--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -42,8 +42,34 @@
     </div>
 
     <main>
-        
-    </main>
+    <div class="contact-card">
+        <div id="contact-info">
+            <h2>Contact Information</h2>
+            <p>Address: 123 Scooter Street, Cozumel, Mexico</p>
+            <p>Phone: +1-123-456-7890</p>
+            <p>Email: ScootsRentals@scoots.com</p>
+        </div>
+    </div>
+
+    <div class="map-card">
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Q5cO7X1nI03TgZY2n70ivMZ3b0j8hMA&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
+    </div>
+
+    <div class="contact-card">
+        <div id="contact-form">
+            <h2>Contact Us</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="comment">Comment:</label>
+                <textarea id="comment" name="comment" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+</main>
 
     <footer>
 
