added lazy load to the iframe

--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="map-card">
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Q5cO7X1nI03TgZY2n70ivMZ3b0j8hMA&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Q5cO7X1nI03TgZY2n70ivMZ3b0j8hMA&ehbc=2E312F&noprof=1" loading="lazy" width="640" height="480"></iframe>
     </div>
 
     <div class="contact-card">
