fixed a value error

--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -65,7 +65,7 @@
 
                     <label for="rental-type">Rental Type:</label>
                     <select id="rental-type" name="rental-type" required>
-                        <option value="scooter">Honda Metropolitan (49cc) - 1 person</option>
+                        <option value="">Honda Metropolitan (49cc) - 1 person</option>
                         <option value="bike">Honda Dio (110cc) - 2 person</option>
                         <option value="bike">Honda PCX150 (149cc) - 2 person</option>
                         <option value="bike">Honda Pioneer 1000 - 4 person</option>
