slight change to index

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -84,7 +84,7 @@
                 <div class="location-title">Rental Locations</div>
                 <ul class="location-list">
                     <li><strong>Playa del Carmen-Cozumel Ferry Dock</strong>: Near the Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel</li>
-                    <li><strong>Terminal Puerta Maya</strong>: Near the Terminal Puerta Maya further south along the coast which caters to the cruise lines and patrons.</li>
+                    <li><strong>Terminal Puerta Maya</strong>: Near the Terminal Puerta Maya further south along the coast.</li>
                 </ul>
             </div>
 
