finished the weather banner and weather card. I hope.......

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -29,6 +29,11 @@
 
     </header>
 
+    <div id="weather-banner">
+        <span id="max-temp"></span>
+        <button id="close-banner">Close</button>
+    </div>
+
     <button id="menu"></button>
     <nav class="navigation">
         <ul>
@@ -53,7 +58,7 @@
     </div>
 
     <main>
-        
+
         <div class="grid-container">
             <div class="summary-card-container">
                 <div class="summary-card">
