--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -78,8 +78,8 @@
             <a href="https://twitter.com/?lang=en" class="fa fa-twitter"></a>
             <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
         </div>
-        <p>&copy; <span id="currentYear"></span>, ~Scoots~ Scooter Rentals, Contact Us: +1-123-456-7890, Email: ScootsRentals@scoots.com</p>
-
+        <p>&copy; <span id="currentYear"></span> | ~Scoots~ Scooter Rentals | Contact Us: +1-123-456-7890 | Email: ScootsRentals@scoots.com | <a href="source.html">References</a></p>
+        
     </footer>
 
     <script src="scripts/function.js"></script>
